MET-600 fix redundant code